GET de Bloques por id de Rocodromo
