# slab/src/main/java/com/ipartek/formacion/slab/dtos/LeerBloqueDTO.java
@@ -1,6 +1,6 @@
 package com.ipartek.formacion.slab.dtos;
 
-public record LeerBloqueDTO(String nombre, String urlFoto, GradoDTO grado) {
+public record LeerBloqueDTO(String nombre, LeerFotoDTO foto, GradoDTO grado, RocodromoDTO rocodromo) {
 
 
 	
