# slab/src/main/java/com/ipartek/formacion/slab/rest/RocodromoRest.java
@@ -1,0 +1,21 @@
+package com.ipartek.formacion.slab.rest;
+
+import java.util.ArrayList;
+
+import com.ipartek.formacion.slab.accesodatos.RocodromoAccesoDatos;
+import com.ipartek.formacion.slab.dtos.LeerBloqueDTO;
+
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.PathParam;
+
+@Path("/rocodromos")
+public class RocodromoRest {
+ 
+	@GET
+	@Path("/{id}")
+	public ArrayList<LeerBloqueDTO> obtenerTodosPorId(@PathParam("id") Long id) {
+		return RocodromoAccesoDatos.obtenerTodosPorId(id);
+	}
+
+}
